--- a/Bloggie.Web.csproj
+++ b/Bloggie.Web.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <PackageReference Include="CloudinaryDotNet" Version="1.27.4" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.2">
         <PrivateAssets>all</PrivateAssets>
